# 3D-RTI

./: .gitignore  Curvature.py  Data.py  Depth.py  Mesh.py  Normal.py  Ply.py  Readme.md  Stereo.py  Stereo1.py  Stereo2.py  test.py
Test1/: Mesh.py  cleanup.sh  test.py
Test1/Original/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  CMakeLists_original.txt  main.cpp  main_original.cpp
xRTI/: Colormap.py  Curvature.py  Data.py  Depth.py  Mask.py  Mesh.py  Normal.py  __init__.py
